Teste de redirecionamento Alteração para teste de redirecionamento na index.html para a página de biografia após 10 segundos.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="refresh" content="0;url=https://jeffersondev.github.io/alura-html5-css3/bio.html">
+        <meta http-equiv="refresh" content="10;url=https://jeffersondev.github.io/alura-html5-css3/bio.html">
     </head>
+    <body>
+        <h1>Em construção</h1>
+    </body>
 </html>
